package edu.fiuba.algo3.modelo.FlasheadaConObserver;

public class AlgoStar extends Observable{

}
