@startuml

package "modelo" #DDDDDD {
    class AlgoStar
}

package "JUnit" #DDDDDD {
    class Test
}

package "JSON.simple" << library >> #DDDDDD {
}

package "controladores" #DDDDDD {
    class Controlador
}

package "javafx" << library >> #DDDDDD {
    package "javafx-constrols"{}
    package "javafx-fxml"{}
    package "javafx-media" {}
}

note bottom of Controlador
    Clases de la interfaz gráfica
end note

"JSON.simple" <. "modelo"
Test ..> "modelo"
"JSON.simple" <.."controladores"
"modelo" <.. "controladores"
"javafx" <.. "controladores"


@enduml
